--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # OpenAI Configuration
 OPENAI_API_KEY=your-api-key-here
-OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MODEL=gpt-3.5-turbo  # or gpt-4, gpt-4-turbo-preview
 
 # Flask Configuration
-FLASK_HOST=0.0.0.0
-FLASK_PORT=5000
-FLASK_DEBUG=True 
+FLASK_HOST=0.0.0.0        # Use 127.0.0.1 for local-only access
+FLASK_PORT=5000           # Port for the Flask API server
+FLASK_DEBUG=True          # Set to False in production
+
+# Frontend Configuration (optional)
+FRONTEND_PORT=8000        # Port for the frontend server 
