--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ flask==3.0.0
 flask-cors==5.0.1
 openai==1.12.0
 python-dotenv==1.0.0
-pytest==8.0.0 
+pytest==8.0.0
+requests==2.31.0  # Required for OpenAI API 
