--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # OpenAI Configuration
-OPENAI_API_KEY=your-api-key-here
-OPENAI_MODEL=gpt-3.5-turbo  # or gpt-4, gpt-4-turbo-preview
+OPENAI_API_KEY=sk-your-api-key-here  # Get your API key from https://platform.openai.com/api-keys
+OPENAI_MODEL=gpt-3.5-turbo          # Default model to use (gpt-3.5-turbo or gpt-4)
 
 # Flask Configuration
-FLASK_HOST=0.0.0.0        # Use 127.0.0.1 for local-only access
-FLASK_PORT=5000           # Port for the Flask API server
-FLASK_DEBUG=True          # Set to False in production
+FLASK_HOST=0.0.0.0                  # Use 127.0.0.1 for local-only access
+FLASK_PORT=5001                     # Port for the Flask API server (5000 is often used by AirPlay on macOS)
+FLASK_DEBUG=True                    # Set to False in production
 
 # Frontend Configuration (optional)
-FRONTEND_PORT=8000        # Port for the frontend server 
+FRONTEND_PORT=8000                  # Port for the frontend server 
