--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+# Environment variables
+.env
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -24,6 +26,8 @@ wheels/
 # Virtual Environment
 venv/
 ENV/
+env/
+.env/
 
 # IDE
 .idea/
@@ -31,6 +35,10 @@ ENV/
 *.swp
 *.swo
 
-# Environment variables
-.env
-.env.local 
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/ 
