--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==3.0.0
 flask-cors==5.0.1
-openai==1.12.0
+openai>=1.2.0
 python-dotenv==1.0.0
 pytest==8.0.0
 requests==2.31.0  # Required for OpenAI API 
